k8s/frontend-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: waitress-frontend
  namespace: ai-workloads
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`waitress.ai.hinterdorfer.dev`)
    kind: Rule
    services:
    - name: waitress-frontend
      port: 80
  tls:
    certResolver: le
